# picpop

./: .gitignore  README.md  deploy.sh  package.json  tsconfig.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  captive.py  preview.py  sessions.py  websocket.py
backend/app/db/: base.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  session.py
backend/app/services/: camera.py  qr_generator.py  storage.py  websocket_manager.py
deploy/: README.md  dnsmasq.conf  hostapd.conf  picpop-kiosk.service  picpop-native-kiosk.service  picpop.service  setup.sh
docs/: POWER_DISTRIBUTION.md
frontend/: package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CountdownScreen.tsx  PhotosScreen.tsx  ProcessingScreen.tsx  WaitingScreen.tsx
frontend/src/hooks/: useWebSocket.ts
kiosk/: Cross.toml  index.html  package.json  tailwind.config.js  vite.config.ts
kiosk-native/: Cargo.toml  Cross.toml
kiosk-native/resources/: style.css
kiosk-native/src/: app.rs  config.rs  main.rs  state.rs
kiosk-native/src/api/: http.rs  mod.rs  websocket.rs
kiosk-native/src/ui/: countdown.rs  lightbox.rs  mod.rs  session.rs  welcome.rs  window.rs
kiosk-native/src/ui/widgets/: animations.rs  capture_button.rs  mod.rs  photo_strip.rs  qr_image.rs
kiosk-native/src/video/: mod.rs  pipeline.rs
kiosk/.cross/: Dockerfile.aarch64
kiosk/src/: App.tsx  index.css
kiosk/src-tauri/: Cargo.toml  tauri.conf.json
kiosk/src-tauri/icons/: icon.icns
kiosk/src-tauri/src/: main.rs
kiosk/src/components/: CountdownOverlay.tsx  IdleScreen.tsx  PhotoStripPreview.tsx  SessionScreen.tsx  WelcomeScreen.tsx
mobile/: index.html  package.json  tailwind.config.js  vite.config.ts
mobile/src/: types.ts
mobile/src/components/: PhotosScreen.tsx
mobile/src/hooks/: useWebSocket.ts
scripts/: README.md  build-and-deploy-all.sh  build-and-deploy-kiosk.sh  build-and-deploy-server.sh  build-and-deploy.sh  build-kiosk-arm64.sh  build-kiosk.sh  build-native-kiosk.sh  build-server.sh  build.sh  common.sh  deploy-kiosk.sh  deploy-native-kiosk.sh  deploy-server.sh  deploy.sh  rebuild-docker.sh  restart-services.sh
scripts/docker/: Dockerfile.cross  Dockerfile.qemu
server/: README.md
server/app/: main.py
server/app/api/v1/: __init__.py  captive.py  photos.py
server/app/core/: config.py  logging.py
server/app/db/: session.py
server/app/models/: photo.py  session.py
server/app/schemas/: base.py  photo.py  websocket.py
server/app/services/: __init__.py  camera.py  storage.py
