[package]
name = "picpop-kiosk"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Bornman"]
description = "Native GTK4 kiosk for PicPop photo booth"

[dependencies]
# GTK4 and GLib
gtk4 = { version = "0.9", features = ["v4_12"] }
glib = "0.20"
gio = "0.20"

# GStreamer for video
gstreamer = "0.23"
gstreamer-video = "0.23"
gst-plugin-gtk4 = "0.13"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP and WebSocket
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
