[package]
name = "picpop-kiosk"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Bornman"]
description = "Native GTK4 kiosk for PicPop photo booth"

[dependencies]
# =============================================================================
# GTK4 / GLib / Libadwaita
# =============================================================================
# Target system (Radxa Zero 3W / Debian Forky):
#   - GTK4: 4.20.3
#   - GLib: 2.86.3
#   - Libadwaita: 1.8.3
#
# Build system (Docker / Debian Trixie):
#   - Libadwaita: 1.7.6 (use v1_6 feature for cross-compile compatibility)
#
# Rust crate version mapping:
#   - gtk4 0.10.x requires gtk4-sys 0.10.x (GTK4 4.x)
#   - libadwaita 0.8.x requires gtk4 0.10.x
#   - glib/gio 0.21.x matches gtk4 0.10.x
#
gtk4 = { version = "0.10", features = ["v4_12"] }
glib = "0.21"
gio = "0.21"
libadwaita = { version = "0.8", features = ["v1_6"] }

# =============================================================================
# GStreamer
# =============================================================================
# Target system: GStreamer 1.26.10, gstreamer1.0-gtk4 0.14.4
#
# gst-plugin-gtk4 0.14.x uses gtk4 0.10.x and gstreamer 0.24.x
#
gstreamer = "0.24"
gstreamer-video = "0.24"
gst-plugin-gtk4 = { version = "0.14", features = ["gtk_v4_12"] }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time"] }

# HTTP and WebSocket
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
